# juan_saga

./: .gitignore  LICENSE  README.md  bgm.tscn  default_bus_layout.tres  export_presets.cfg  meson.build  project.godot  score_container.tscn
actors/cutout_character/: cutout_character.tscn  sprite_sheet.png.import
actors/enemies/: 2_damage.ogg.import  3_bugdeath.ogg.import  bugs.gd  bugs.tscn  ground_bug.gd  ground_bug.tscn  screen_bug.gd  screen_bug.png.import  screen_bug.tscn  screen_bug_hilit.png.import  screen_bug_pressed.png.import
actors/fighting_actors/: basic_fighting_character.gd  basic_fighting_character.tscn  player_fighting_character.tscn
actors/god_hand/: god_hand.png.import  god_hand.tscn  tutoring.gd  tutoring.tscn
actors/juan_alpaca/: 1_jump.ogg.import  basic_platform_character.tscn  cutout_character.tscn  juan.gd  juan_alpaca.gd  juan_alpaca.tscn  new_juan.tscn  sprite_sheet.png.import
actors/pigdev/: pig_contributor.gd  pig_contributor.tscn
actors/platform_actors/: pickup_character.gd  pickup_character.tscn  platform_character.gd  player_platform_character.gd
addons/platform_actors/: platform_actor.gd  player_platform_actor.gd
assets/bgm/: background_music.ogg.import  ending_music.ogg.import  main_menu_music.ogg.import
assets/sfx/: 1_jump.ogg.import  2_damage.ogg.import  3_bugdeath.ogg.import  4_newnode.ogg.import  5_scoring.ogg.import  6_launching.ogg.import  7_charging.ogg.import
data/: com.github.pigdevstudio.juan_saga.appdata.xml  com.github.pigdevstudio.juan_saga.desktop  com.github.pigdevstudio.juans-saga.appdata.xml  com.github.pigdevstudio.juans-saga.desktop  meson.build
interface/: menu_bar_bg.tres  menu_bar_fg.tres  menu_bar_hilit.tres  score_pop.tscn  theme.tres
interface/dialogue/: dialogue_box.gd  dialogue_box.tscn
interface/hud/: count_down.tscn  hud.gd  hud.tscn  items.gd
interface/nodes/: node_00.png.import  node_01.png.import  node_02.png.import  node_03.png.import
levels/: background_music.ogg.import  level_00.gd  level_00.tscn  level_01.tscn  level_02.tscn  level_03.tscn  level_04.tscn  level_05.tscn  level_06.tscn  objectives.gd  spawner.gd  spawner.tres  tile_map.gd
levels/level_00/: idle.tres  level_00.gd  level_00.tscn  level_test.tscn
levels/level_01/: level_01.gd  level_01.tscn
levels/level_02/: level_02.gd  level_02.tscn
levels/level_03/: level_03.gd  level_03.tscn
levels/level_04/: level_04.tscn
levels/level_05/: level_05.gd  level_05.tscn
levels/level_06/: level_06.tscn
levels/level_07/: idle.tres  level_07.gd  level_07.tscn
levels/level_08/: idle.tres  level_08.tscn
levels/multiplayer_coop/: level_multi.tscn  multiplayer_coop.tres  multiplayer_coop.tscn
levels/tilesets/: blue_land.png.import  foliage_00.png.import  foliage_01.png.import  foliage_02.png.import  foliage_03.png.import  foliage_04.png.import  foliage_05.png.import  foliage_06.png.import  foliage_07.png.import  foliage_08.png.import  rock_00.png.import  tile_01.png.import  tile_01.png.import~HEAD  tile_02.png.import  tile_02.png.import~HEAD  tile_03.png.import  (+23 more)
meson/: export.sh
particles/: 02.png.import  AuraBug.tscn  WallBug.tscn  WallBugMaterial.material  boss_bug_material.tres
promo/: itch_cover.png.import  title_screen_00.png.import  title_screen_01.png.import
screens/: basic_screen.gd  basic_screen.tscn
source/: bgm.tscn  default_bus_layout.tres  project.godot  wait.tscn
(+168 files in other folders)
